--- a/models/CNY-bank-info.v1.yaml
+++ b/models/CNY-bank-info.v1.yaml
@@ -8,7 +8,298 @@ properties:
     maxLength: 32
   bankCode:
     type: string
-    description: 银行编码
+    description: 银行编码，请参照`bank-info-enum`对象
+    enum:
+      - 中国工商银行
+      - 中国农业银行
+      - 中国银行
+      - 中国建设银行
+      - 中国邮政储蓄银行
+      - 招商银行
+      - 光大银行
+      - 平安银行
+      - 中信银行
+      - 民生银行
+      - 兴业银行
+      - 华夏银行
+      - 上海浦东发展银行
+      - 广东发展银行
+      - 北京银行
+      - 杭州银行
+      - 交通银行
+      - 安徽省农村信用社联合社
+      - 安阳商业银行
+      - 鞍山银行
+      - 包商银行
+      - 宝鸡商行
+      - 保定银行
+      - 北京农村商业银行
+      - 渤海银行
+      - 沧州银行
+      - 常熟农村商业银行
+      - 朝阳银行
+      - 成都农村商业银行
+      - 成都市商业银行
+      - 承德市商业银行
+      - 承德银行
+      - 大华银行（ 中国）
+      - 大连市商业银行
+      - 大新银行（ 中国）
+      - 大兴安岭农村商业银行
+      - 丹东市商业银行
+      - 德阳市商业银行
+      - 德阳银行
+      - 德州银行
+      - 东莞农商
+      - 东莞商行
+      - 东莞银行
+      - 东亚银行
+      - 东营银行
+      - 东营银行
+      - 佛山顺德农村商业银行
+      - 福建海峡银行
+      - 福建省农村信用社联合社
+      - 抚顺市商业银行
+      - 抚顺银行
+      - 阜新市商业银行
+      - 阜新银行
+      - 富滇银行
+      - 甘肃农信社
+      - 甘肃银行
+      - 赣州市商业银行
+      - 赣州银行股份有限公司
+      - 广东华兴银行
+      - 广东南粤银行
+      - 广东农信
+      - 广西北部湾银行
+      - 广西农村信用社联合社
+      - 广元贵商村镇银行
+      - 广州农商
+      - 广州市商业银行
+      - 广州银行
+      - 贵阳银行
+      - 贵州省农村信用社联合社
+      - 贵州银行
+      - 桂林市商业银行
+      - 桂林银行
+      - 哈尔滨农村商业银行股份有限公司
+      - 哈尔滨商行
+      - 哈密市商业银行
+      - 海口联合农村商业银行
+      - 海南省农村信用社联合社
+      - 海南银行股份有限公司
+      - 邯郸市商业银行
+      - 韩亚银行（ 中国）
+      - 汉口银行
+      - 河北省农村信用社联合社
+      - 河北银行股份有限公司
+      - 河南省农村信用社联合社
+      - 鹤壁银行
+      - 黑龙江农信社
+      - 恒丰银行
+      - 恒生银行
+      - 衡水市商业银行
+      - 侯马太行村镇银行
+      - 葫芦岛银行
+      - 湖北农信社
+      - 湖北银行
+      - 湖南省农村信用社联合社
+      - 湖州市商业银行
+      - 花旗银行
+      - 华美银行
+      - 华融湘江银行
+      - 黄河农村商业银行
+      - 徽商银行
+      - 汇丰银行
+      - 吉林省农信社
+      - 吉林市商业银行
+      - 吉林银行
+      - 济南市商业银行
+      - 济宁银行
+      - 嘉兴市商业银行
+      - 江门新会农村商业银行
+      - 江南农村商业银行
+      - 江苏东吴农村商业银行
+      - 江苏省农村信用社联合社
+      - 江苏沭阳东吴村镇银行
+      - 江苏银行
+      - 江苏紫金农村商业银行
+      - 江西省农村信用社联合社
+      - 江西银行
+      - 江阴市农村商业银行
+      - 焦作市商业银行
+      - 金华银行
+      - 锦州银行
+      - 锦州银行
+      - 晋城商业银行
+      - 晋商银行
+      - 晋商银行
+      - 晋中市商业银行
+      - 九江银行
+      - 开封新东方村镇银行
+      - 昆仑银行股份有限公司
+      - 昆明农联社
+      - 昆明商业银行
+      - 昆山农村信用合作社联合社
+      - 莱商银行
+      - 兰州市商业银行
+      - 廊坊银行
+      - 乐山市商业银行
+      - 连云港市商业银行
+      - 辽宁省农村信用社联合社
+      - 辽阳市商业银行
+      - 临商银行
+      - 柳州市商业银行
+      - 柳州银行
+      - 龙江银行
+      - 泸州市商业银行
+      - 洛阳银行
+      - 漯河银行
+      - 绵阳市商业银行
+      - 南昌市商业银行
+      - 南充市商业银行
+      - 南京银行
+      - 南宁市商业银行
+      - 南通市商业银行
+      - 南洋商业银行
+      - 南洋商业银行（ 中国）
+      - 内蒙古农村信用社联合式
+      - 内蒙古银行
+      - 内蒙古银行
+      - 宁波市农业银行
+      - 宁波通商银行
+      - 宁波银行
+      - 宁波鄞州农村合作银行
+      - 宁夏贺兰回商村镇银行
+      - 宁夏银行
+      - 宁阳沪农商村镇银行
+      - 农信社
+      - 攀枝花市商业银行
+      - 平顶山银行股份有限公司
+      - 齐鲁银行
+      - 齐商银行
+      - 齐商银行
+      - 秦皇岛市商业银行
+      - 青岛农信
+      - 青岛市商业银行
+      - 青海省农村信用社联合社
+      - 青海银行
+      - 青海银行
+      - 曲靖市商业银行
+      - 泉州银行
+      - 日照银行
+      - 融水柳银村镇银行
+      - 瑞穗银行（ 中国） 有限公司
+      - 三门峡银行
+      - 厦门国际银行
+      - 厦门市商业银行
+      - 厦门银行股份有限公司
+      - 山东农信社
+      - 山东省农联社
+      - 山西省农村信用社联合社
+      - 陕西省农村信用社联合社
+      - 商丘市商业银行
+      - 上海华瑞银行
+      - 上海农村商业银行
+      - 上海银行
+      - 上饶银行
+      - 绍兴市商业银行
+      - 深农商行
+      - 沈阳于洪永安村镇银行
+      - 盛京银行
+      - 石嘴山银行
+      - 双流诚民村镇银行
+      - 四川省农村信用社联合社
+      - 四川天府银行股份有限公司
+      - 苏州银行股份有限公司
+      - 遂宁市商业银行
+      - 台州市商业银行
+      - 太仓农村商业银行
+      - 泰安市商业银行
+      - 泰隆城市信用社
+      - 唐山市商业银行
+      - 天津金城银行
+      - 天津农村商业银行
+      - 天津市农村信用社
+      - 天津银行
+      - 威海市商业银行
+      - 微信转清
+      - 潍坊银行
+      - 温州银行
+      - 乌海市商业银行
+      - 乌鲁木齐市商业银行
+      - 无锡农村商业银行
+      - 吴江农商行
+      - 武冈包商村镇银行
+      - 武汉农商行
+      - 武汉众邦银行
+      - 西安高陵阳光村镇银行
+      - 西安市商业银行
+      - 西安银行
+      - 新韩银行
+      - 新疆农村信用社联合社
+      - 新网银行
+      - 新乡市商业银行
+      - 信阳银行
+      - 信阳珠江村镇银行
+      - 星展银行
+      - 邢台银行
+      - 兴业扫码
+      - 徐州市商业银行
+      - 徐州市市郊农村信用合作社
+      - 许昌市商业银行
+      - 烟台市商业银行
+      - 尧都区农村信用合作社联社
+      - 宜宾市商业银行
+      - 营口市商业银行
+      - 营口沿海银行
+      - 永亨银行
+      - 玉溪市商业银行
+      - 云南省农村信用社
+      - 枣庄银行
+      - 渣打银行
+      - 张家港市农村商业银行
+      - 张家口市商业银行
+      - 长安银行
+      - 长江商业银行
+      - 长沙银行
+      - 长治市商业银行
+      - 浙江稠州商业银行
+      - 浙江民泰商业银行
+      - 浙江泰隆商业银行
+      - 浙江萧山湖商村镇银行
+      - 浙江萧山农村商业银行
+      - 浙商银行
+      - 郑州银行
+      - 中国工商银行(亚洲) 有限公司
+      - 中原银行
+      - 重庆富民银行
+      - 重庆农村商业银行
+      - 重庆农村商业银行
+      - 重庆三峡银行
+      - 重庆市农村信用社联合社
+      - 重庆市商业银行
+      - 重庆渝北银座村镇银行
+      - 周口市商业银行
+      - 珠海华润银行
+      - 珠海华润银行
+      - 驻马店银行
+      - 自贡市商业银行
+      - ANZ银行
+      - Bank of America
+      - Barclays Bank
+      - Barclays Bank
+      - BMO Bank of Montreal
+      - Branch Banking and Trust Company
+      - CIMB Bank Berhad
+      - Citibank
+      - N.A.
+      - Hong Kong Branch
+      - Commonwealth Bank of Australia
+      - Deutsche Bank AG(德意志银行)
+      - National Westminster Bank
+      - Raiffeisenbank AO
+      - RHB Bank Berhad
     maxLength: 64
   provinceCode:
     type: string
