--- a/models/card.v1.yaml
+++ b/models/card.v1.yaml
@@ -11,7 +11,7 @@ properties:
   accountName:
     type: string
     description: 账户名
-  accountNumber:
+  accountNo:
     type: string
     description: 卡号
   routingNumber:
